[package]
name = "jot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
dirs = "4.0.0"
headless_chrome = "1.0.5"
pulldown-cmark = "0.9.3"
resolve-path = "0.1.0"
toml = "0.7.2"
